# fastapi-docsWhatsapp

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  MIGRATION_TO_GEMINI.md  Makefile  PDF_WITH_IMAGES_DOCS.md  README.md  TEXT_EXTRACTION_EXAMPLES.md  app.yaml  cors_config.py  deploy.sh  docker-compose.yml  main copy 2.py  main copy 3.py  main copy 4.py  main copy 7.py  main copy 8.py  main copy.py  main.py  nginx-fixed.conf  pyproject.toml  redeploy.sh  requirements.txt  test-cors.sh  test_pdf_images.py  test_text_extraction.py  verify-setup.sh  verify_gemini_migration.py
.do/: app.yaml
fastapi_docswhatsapp/config/: __init__.py  settings.py
fastapi_docswhatsapp/models/: __init__.py
fastapi_docswhatsapp/services/: gemini_analyzer.py  report_generator.py  supabase_client.py  whatsapp_processor.py
fastapi_docswhatsapp/utils/: __init__.py
